crates/data-dict/tests/snapshots/validate_spec__s13_descending_range.snap
---
source: crates/data-dict/tests/validate_spec.rs
expression: "failing_diagnostic(\"spec/s13-descending-range.yaml\")"
---
Error: [S13] A range's minimum must be less than or equal to its maximum.
    ╭─[ spec/s13-descending-range.yaml:14:17 ]
    │
  7 │   table:
    │ 
 11 │       - name: mass
    │ 
 14 │         range: [100, 10]
    │                 ─┬─  
    │                  ╰─── is greater than the maximum
────╯
